--- a/popup.css
+++ b/popup.css
@@ -52,3 +52,11 @@
   flex: auto;
   text-align: right;
 }
+
+#title {
+  border: 1px solid #ffffff;
+}
+
+#title:focus {
+  border: 1px solid #272f35;
+}
